changed window location redirect urls in templates

--- a/src/templates/product_detail.html
+++ b/src/templates/product_detail.html
@@ -97,7 +97,7 @@
             .then(response => {
                 if (response.ok) {
                     console.log('Продукт успешно удален');
-                    window.location.href = '/product_list/';
+                    window.location.href = '/html/product_list/';
                 } else {
                     console.error('Ошибка удаления продукта');
                 }
