--- a/src/templates/product_list.html
+++ b/src/templates/product_list.html
@@ -93,11 +93,11 @@
 
         function goToProductDetail(row) {
             const productId = row.getAttribute('data-product-id');
-            window.location.href = `/product_detail/${productId}/`; // Измените URL в соответствии с вашими маршрутами
+            window.location.href = `/html/product_detail/${productId}/`; // Измените URL в соответствии с вашими маршрутами
         }
 
         function goToCreateProduct() {
-            window.location.href = '/product_create/'; // Измените URL в соответствии с вашими маршрутами
+            window.location.href = '/html/product_create/'; // Измените URL в соответствии с вашими маршрутами
         }
     </script>
 </body>
