--- a/src/templates/product_create.html
+++ b/src/templates/product_create.html
@@ -92,7 +92,7 @@
             })
             .then(data => {
                 console.log('Product created successfully:', data);
-                window.location.href = '/product_list/'; // Redirect to product list page
+                window.location.href = '/html/product_list/'; // Redirect to product list page
             })
             .catch(error => {
                 console.error('There was a problem creating the product:', error);
